--- a/diffusion_planner/config/scenario_filter/test14-random.yaml
+++ b/diffusion_planner/config/scenario_filter/test14-random.yaml
@@ -3,19 +3,19 @@ _convert_: "all"
 
 scenario_types: # List of scenario types to include
   - starting_left_turn
-  - starting_right_turn
-  - starting_straight_traffic_light_intersection_traversal
-  - stopping_with_lead
-  - high_lateral_acceleration
-  - high_magnitude_speed
-  - low_magnitude_speed
-  - traversing_pickup_dropoff
-  - waiting_for_pedestrian_to_cross
-  - behind_long_vehicle
-  - stationary_in_traffic
-  - near_multiple_vehicles
-  - changing_lane
-  - following_lane_with_lead
+#  - starting_right_turn
+#  - starting_straight_traffic_light_intersection_traversal
+#  - stopping_with_lead
+#  - high_lateral_acceleration
+#  - high_magnitude_speed
+#  - low_magnitude_speed
+#  - traversing_pickup_dropoff
+#  - waiting_for_pedestrian_to_cross
+#  - behind_long_vehicle
+#  - stationary_in_traffic
+#  - near_multiple_vehicles
+#  - changing_lane
+#  - following_lane_with_lead
 scenario_tokens: null # List of scenario tokens to include
 
 log_names: null # Filter scenarios by log names
